2007-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* configure, Makefile.in:
	can be build from a separate build directory

2007-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.2 released

	* gnome-akfavatar:
	german translation

	* acatarsay.c (move_out):
	don't wait after moving out, unless running as loop

	* avatarsay.c (checkoptions, help):
	new option: "--encoding="

	* avatar.c (avt_mb_decode):
	error-tolerance for broken multibyte encodings (UTF-8)

	* avatarsay.c (check_system_encoding):
	new function: try to get encoding from LC_ALL, LC_CTYPE or LANG

	* gnome-akfavatar:
	open Website from menu
	
	* avatarsay.c (help, handle_image_command)
	(handle_avatarimage_command, handle_audio_command):
	datadir needs no trailing slash anymore

2007-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.1 released

	* avatar.c (avt_say):
	fix: check for events with each char, when the delay is switched off

	* akfavatar.h, avatar.c (avt_set_text_delay, avt_set_flip_page_delay):
	new functions
	(avt_set_delays): marked deprecated
	
	* akfavatar.pas (SetTextDelay, SetFlipPageDelay)
	new functions

	* akfavatar.pas 
	(MoveAvatarIn): fix: after initializing the system, the avatar
	  isn't moved in a second time
	(MoveAvatarOut): if not initialized, do nothing

	* avatar.c (avt_initialize):
	ballonheight is aligned with the LINEHEIGHT

	* akfavatar.h, avatar.c (avt_set_scroll_mode, avt_get_scroll_mode):
	new functions

	* akfavatar.h, avatar.c (avt_delete_lines, avt_insert_lines):
	new functions
	
	* akfavatar.pas (ClearKeys):
	new procedure

	* avatar.c (avt_say, avt_new_line):
	fix: new line after the last line make the text scroll or page flip
	(fixes bug introduced in 0.13.1)
	
	* avatar.c (avt_say, avt_ask):
	fix: off-by-one error fixes

        * akfavatar.pas (fpc_io_read, gpc_io_read):
	fix: clear keyboard buffer

	* akfavatar.h, avatar.c (avt_viewport):
	new function

	* akfavatar.h, avatar.c (avt_bell, avt_flash):
	new functions