@@ -1,4 +1,7 @@
-2007-10-08  Andreas K. Foerster  <info@akfoerster.de>
+2007-10-12  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c (avt_delete_lines, avt_insert_lines):
+	optimized scrolling
 
 	* configure, Makefile.in:
 	can be build from a separate build directory
